# weibird

./: AUTHORS  NEWS  README  README.md  com.jonathankang.Weibird.json  meson.build
data/: com.jonathankang.Weibird.appdata.xml  com.jonathankang.Weibird.desktop  com.jonathankang.Weibird.gresource.xml  com.jonathankang.Weibird.gschema.xml  gw-headerbar.ui  gw-timeline-list.ui  gw-window.ui  meson.build  org.gnome.Weibo.gresource.xml  org.gnome.Weibo.gschema.xml  wb-comment-row.ui  wb-compose-window.ui  wb-headerbar.ui  wb-main-widget.ui  wb-media-dialog.ui  wb-profile-page.ui  wb-style.css  wb-timeline-list.ui  wb-tweet-detail-page.ui  wb-window.ui
data/icons/: meson.build
src/: gw-application.c  gw-application.h  gw-headerbar.c  gw-headerbar.h  gw-image-button.c  gw-image-button.h  gw-image.c  gw-image.h  gw-main.c  gw-multi-media-widget.c  gw-multi-media-widget.h  gw-timeline-list.c  gw-timeline-list.h  gw-timeline-row.c  gw-timeline-row.h  gw-util.c  gw-util.h  gw-window.c  gw-window.h  meson.build  wb-application.c  wb-application.h  wb-avatar-widget.c  wb-avatar-widget.h  wb-comment-list.c  wb-comment-list.h  wb-comment-row.c  wb-comment-row.h  wb-comment.c  wb-comment.h  wb-compose-window.c  wb-compose-window.h  wb-headerbar.c  wb-headerbar.h  wb-image-button.c  wb-image-button.h  wb-main-widget.c  wb-main-widget.h  wb-main.c  wb-media-dialog.c  (+27 more)
